syntax = "proto3";

package nostr;

service NostrService {
  rpc ConfigureTrustedNostrRelays (ConfigureNostrRelaysRequest) returns (Empty) {}

  rpc SendEncryptedNostrDirectMessage (NostrDirectMessageRequest) returns (Empty) {}
}

message Empty {}

message ConfigureNostrRelaysRequest {
  repeated NostrRelay relays = 1;
}

message NostrDirectMessageRequest {
  string message = 1;

  NostrRecipient recipient = 2;

  bool retry = 3;
}

message NostrRecipient {
  optional string npub = 1;

  optional string pubkey = 2;
}

message NostrRelay {
  string socket = 1;

  bool read = 2;

  bool write = 3;
}
